# torch-eager-max-backend

./: CLAUDE.md  README.md  main.py  max_backend.py  pyproject.toml  test_chaining.py  test_sqrt.py
.claude/: settings.local.json
